# i-dblink

./: .gitignore  AGENTS.md  CLAUDE.md  QWEN.md  README.md  UI_AUDIT_REPORT.md  docker-compose.test.yml  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.coverage.json
.cargo/: config.toml
.github/workflows/: test.yml
doc/: 01-requirements.md  02-ui-design.md  03-interaction-design.md  AUTOMATION_TEST.md  DEVELOPMENT_PLAN.md  FEATURES_IMPLEMENTATION_REPORT.md  FEATURES_UPDATE_REPORT_v0.2.0.md  GO_BACKEND_PLAN.md  I18N_ISSUES.md  INTERACTION_FIX_REPORT.md  NAVICAT_INTERACTION_ANALYSIS.md  P0_SPEC.md  P1_SPEC.md  P2_SPEC.md  P3_SPEC.md  README.md  RIGHT_PANEL_INTERACTION_COMPARISON.md  TECH_DEBT.md  TEST_PLAN.md  TEST_REPORT.md  TREE_CLICK_INTERACTION_COMPARISON.md  development-plan.md  ui-improvements-vs-navicat.md
e2e/: README.md  backup-restore.test.ts  connection-flow.test.ts  connection-tree.test.ts  keyboard-shortcuts.test.ts  panel-interaction.test.ts  query-flow.test.ts  regression.test.ts  schema-compare.test.ts  settings-flow.test.ts  smoke.test.ts  table-operations.test.ts  tauri-mcp-integration.test.ts  transaction-flow.test.ts
e2e/helpers/: test-helpers.ts
e2e/mcp-tests/: t_01_initial_page.sh  t_02_03_i18n.sh  t_04_theme.sh  t_05_06_07_connections.sh
go-backend/: go.mod  go.sum  main.go  main_test.go  server.go
go-backend/api/: backup.go  compare.go  connection.go  connection_test.go  dameng.go  ddl.go  ddl_test.go  getddl.go  helpers.go  import.go  metadata.go  metadata_test.go  mysql.go  oracle.go  postgres.go  query.go  (+12 more)
scripts/: build-sidecar-release.js
src/: AGENTS.md  App.css  App.tsx  main.tsx  style.css  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  commands.rs  main.rs  security.rs  security_test.rs  sidecar.rs  sidecar_test.rs  storage.rs  storage_test.rs
src-tauri/src/commands/: mod.rs  mod_test.rs
src-tauri/src/db/: AGENTS.md  migrations.rs  mod.rs  models.rs  pool.rs  query.rs  repository.rs
src-tauri/src/drivers/: db_pool.rs  mod.rs  mysql_driver.rs  pg_driver.rs  sqlite_driver.rs
src-tauri/tests/: commands_tests.rs  integration_tests.rs  storage_tests.rs
(+113 files in other folders)
