[package]
name = "idblink"
version = "0.1.0"
description = "A cross-platform database management tool like Navicat Premium"
authors = ["iDBLink Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite", "chrono", "uuid"] }
mobc = "0.8"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
fs_extra = "1.3"
urlencoding = "2.1"
keyring = "3"
tracing = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[alias]
lint = "clippy -- -D warnings"
