[package]
name = "idblink"
version = "0.1.0"
description = "A cross-platform database management tool like Navicat Premium"
authors = ["iDBLink Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-mcp-bridge = "0.11"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hostname = "0.4"
libc = "0.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

